--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/tailwindcss": "7.0.0-beta.0",
     "@pinia/nuxt": "^0.11.1",
     "nuxt": "^3.17.5",
+    "ofetch": "^1.4.1",
     "pinia": "^3.0.3",
     "toastify-js": "^1.12.0",
     "vue": "^3.5.17",
